--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="https://pidash.mattle.uk/dashboard.js"></script>
 
 
-    <title>epic admin</title>
+    <title>hp - netdata</title>
 </head>
 <style>
           body {
@@ -27,7 +27,7 @@
       
 </style>
 <body>
-     <h1>&nbsp&nbspPi (Plex, qBittorent, Lomorage, Nextcloud)&nbsp&nbsp<a href="https://pidash.mattle.uk/#menu_windows_hp_submenu_cpu;after=-540;before=0;theme=slate;utc=Europe/London"><img src="https://blog.netdata.cloud/img/logo600x600.png"height="56" width="56"></a></h1>  
+     <h1>&nbsp&nbspHP (Plex, Tautulli)&nbsp&nbsp<a href="https://pidash.mattle.uk/#menu_windows_hp_submenu_cpu;after=-540;before=0;theme=slate;utc=Europe/London"><img src="https://blog.netdata.cloud/img/logo600x600.png"height="56" width="56"></a></h1>  
     <div style="width: 100%; text-align: center;">
         <div class="netdata-container-easypiechart" 
         style="margin-right: 10px; width: 9%;"
